syntax = "proto3";
package mainchain.wrkchain.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/unification-com/mainchain/x/wrkchain/types";

message WrkChain {
    uint64 wrkchain_id = 1;
    string moniker = 2;
    string name = 3;
    string genesis = 4;
    string type = 5;
    uint64 lastblock = 6;
    uint64 num_blocks = 7;
    uint64 reg_time = 8;
    string owner = 9;
}

message WrkChainBlock {
  uint64 height = 1;
  string blockhash = 2;
  string parenthash = 3;
  string hash1 = 4;
  string hash2 = 5;
  string hash3 = 6;
  uint64 sub_time = 7;
}

message Params {
  uint64 fee_register = 1;
  uint64 fee_record = 2;
  string denom = 3;
}
